--- a/index.html
+++ b/index.html
@@ -374,6 +374,65 @@ function openPopup(src) {
                         Universitas Gadjah Mada.
                     </p>
                 </div>
+				<hr style="margin:30px 0;">
+
+<!-- DOSEN -->
+<div class="row justify-content-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 text-center" style="margin-bottom:30px;">
+        <img src="img/dosen.jpg"
+             class="img-fluid"
+             style="width:180px; height:180px; object-fit:cover; border-radius:50%;
+                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+        <h5 style="margin-top:12px;">Nama Dosen</h5>
+        <p style="font-size:14px; margin:0;">Dosen Pembimbing</p>
+    </div>
+</div>
+
+<!-- ANGGOTA KELOMPOK -->
+<div class="row justify-content-center">
+
+    <!-- ANGGOTA 1 -->
+    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
+        <img src="img/anggota1.jpg"
+             class="img-fluid"
+             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
+                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+        <h6 style="margin-top:10px;">Nama Anggota 1</h6>
+        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+    </div>
+
+    <!-- ANGGOTA 2 -->
+    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
+        <img src="img/anggota2.jpg"
+             class="img-fluid"
+             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
+                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+        <h6 style="margin-top:10px;">Nama Anggota 2</h6>
+        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+    </div>
+
+    <!-- ANGGOTA 3 -->
+    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
+        <img src="img/anggota3.jpg"
+             class="img-fluid"
+             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
+                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+        <h6 style="margin-top:10px;">Nama Anggota 3</h6>
+        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+    </div>
+
+    <!-- ANGGOTA 4 -->
+    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
+        <img src="img/anggota4.jpg"
+             class="img-fluid"
+             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
+                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+        <h6 style="margin-top:10px;">Nama Anggota 4</h6>
+        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+    </div>
+
+</div>
+
             </div>
         </div>
     </div>
