--- a/index.html
+++ b/index.html
@@ -367,24 +367,78 @@ function openPopup(src) {
                 <div class="title text-center">
                     <h1 class="mb-10">Informasi</h1>
                     <p style="margin-top:15px; line-height:1.8;">
-                        Tim PRGG 2025 - Pemetaan Nama Jalan dan Gang di Kemantren Danurejan dan Gedongtengen di bawah bimbingan<br>
-						Prof. Ir. Nurrohmat Widjajanti, M.T., Ph.D., IPU., ASEAN Eng., APEC Eng. 
+                        Tim PRGG 2025 - Pemetaan Nama Jalan dan Gang di Kemantren Danurejan dan Gedongtengen
+                        di bawah bimbingan<br>
+                        Prof. Ir. Nurrohmat Widjajanti, M.T., Ph.D., IPU., ASEAN Eng., APEC Eng. 
                         sebagai pemenuhan mata kuliah Proyek Rekayasa Geodesi-Geomatika 
                         Program Studi Sarjana Teknik Geodesi, Fakultas Teknik,
                         Universitas Gadjah Mada.
                     </p>
                 </div>
-				<hr style="margin:30px 0;">
+                <hr style="margin:30px 0;">
 
 <!-- DOSEN -->
 <div class="row justify-content-center">
     <div class="col-lg-3 col-md-4 col-sm-6 text-center" style="margin-bottom:30px;">
-        <img src="img/dosen.jpg"
-             class="img-fluid"
-             style="width:180px; height:180px; object-fit:cover; border-radius:50%;
-                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-        <h5 style="margin-top:12px;">Nama Dosen</h5>
-        <p style="font-size:14px; margin:0;">Dosen Pembimbing</p>
+
+    <!-- TULISAN DI ATAS FOTO -->
+    <p style="
+        font-size:20px;
+        font-weight:600;
+        margin-bottom:10px;
+        color:#000;
+    ">
+        Dosen Pembimbing
+    </p>
+
+    <!-- FOTO -->
+    <img src="img/a.png"
+         class="img-fluid"
+         style="
+            width:180px;
+            height:180px;
+            object-fit:cover;
+            border-radius:50%;
+            box-shadow:0 4px 10px rgba(0,0,0,0.2);
+         ">
+
+    <!-- NAMA -->
+    <p style="
+        margin-top:12px;
+        margin-bottom:2px;
+        font-size:12px;
+        line-height:1.4;
+        color:#000;
+        white-space:normal;
+    ">
+        Prof. Ir. Nurrohmat Widjajanti, M.T., Ph.D., IPU., ASEAN Eng., APEC Eng.
+    </p>
+
+    <!-- NIP -->
+    <p style="
+        margin-top:0px;
+        font-size:12px;
+        line-height:1.2;
+        color:#555;
+    ">
+        NIP. 196910211994032003
+    </p>
+
+</div>
+
+
+
+</div>
+<div class="row justify-content-center">
+    <div class="col-12 text-center" style="margin-bottom:20px;">
+        <p style="
+            font-size:20px;
+            font-weight:600;
+            margin-bottom:10px;
+            color:#000;
+        ">
+            Anggota Tim
+        </p>
     </div>
 </div>
 
@@ -392,46 +446,139 @@ function openPopup(src) {
 <div class="row justify-content-center">
 
     <!-- ANGGOTA 1 -->
-    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
-        <img src="img/anggota1.jpg"
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center" style="margin-bottom:25px;">
+
+        <img src="img/b.png"
              class="img-fluid"
-             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
-                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-        <h6 style="margin-top:10px;">Nama Anggota 1</h6>
-        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+             style="
+                width:140px;
+                height:140px;
+                object-fit:cover;
+                border-radius:50%;
+                box-shadow:0 4px 10px rgba(0,0,0,0.2);
+             ">
+
+        <p style="
+            margin-top:10px;
+            margin-bottom:2px;
+            font-size:12px;
+            line-height:1.4;
+            color:#000;
+        ">
+            Riyana Ajizah
+        </p>
+
+        <p style="
+            margin-top:0;
+            font-size:10px;
+            line-height:1.2;
+            color:#555;
+        ">
+            (22/492759/TK/53944)
+        </p>
     </div>
 
     <!-- ANGGOTA 2 -->
-    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
-        <img src="img/anggota2.jpg"
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center" style="margin-bottom:25px;">
+        <!-- ISI SAMA, GANTI FOTO + NAMA + NIM -->
+        <img src="img/c.png"
              class="img-fluid"
-             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
-                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-        <h6 style="margin-top:10px;">Nama Anggota 2</h6>
-        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+             style="
+                width:140px;
+                height:140px;
+                object-fit:cover;
+                border-radius:50%;
+                box-shadow:0 4px 10px rgba(0,0,0,0.2);
+             ">
+
+        <p style="
+            margin-top:10px;
+            margin-bottom:2px;
+            font-size:12px;
+            line-height:1.4;
+            color:#000;
+        ">
+            Caecilia Gisela Baba
+        </p>
+
+        <p style="
+            margin-top:0;
+            font-size:10px;
+            line-height:1.2;
+            color:#555;
+        ">
+            (22/497796/TK/54574)
+        </p>
     </div>
 
     <!-- ANGGOTA 3 -->
-    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
-        <img src="img/anggota3.jpg"
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center" style="margin-bottom:25px;">
+        <!-- ISI SAMA -->
+        <img src="img/d.png"
              class="img-fluid"
-             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
-                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-        <h6 style="margin-top:10px;">Nama Anggota 3</h6>
-        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+             style="
+                width:140px;
+                height:140px;
+                object-fit:cover;
+                border-radius:50%;
+                box-shadow:0 4px 10px rgba(0,0,0,0.2);
+             ">
+
+        <p style="
+            margin-top:10px;
+            margin-bottom:2px;
+            font-size:12px;
+            line-height:1.4;
+            color:#000;
+        ">
+            Bausa Seta Pandega
+        </p>
+
+        <p style="
+            margin-top:0;
+            font-size:10px;
+            line-height:1.2;
+            color:#555;
+        ">
+            (22/499860/TK/54770)
+        </p>
     </div>
 
     <!-- ANGGOTA 4 -->
-    <div class="col-lg-2 col-md-3 col-sm-4 text-center" style="margin-bottom:25px;">
-        <img src="img/anggota4.jpg"
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center" style="margin-bottom:25px;">
+        <!-- ISI SAMA -->
+        <img src="img/e.png"
              class="img-fluid"
-             style="width:140px; height:140px; object-fit:cover; border-radius:50%;
-                    box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-        <h6 style="margin-top:10px;">Nama Anggota 4</h6>
-        <p style="font-size:13px; margin:0;">NIM: 21XXXXXXXX</p>
+             style="
+                width:140px;
+                height:140px;
+                object-fit:cover;
+                border-radius:50%;
+                box-shadow:0 4px 10px rgba(0,0,0,0.2);
+             ">
+
+        <p style="
+            margin-top:10px;
+            margin-bottom:2px;
+            font-size:12px;
+            line-height:1.4;
+            color:#000;
+        ">
+            Ikhsan Yoga Erdiansyah
+        </p>
+
+        <p style="
+            margin-top:0;
+            font-size:10px;
+            line-height:1.2;
+            color:#555;
+        ">
+            (22/503448/TK/55008)
+        </p>
     </div>
 
 </div>
+
 
             </div>
         </div>
